--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Simple OAuth 2 library for Symfony projects",
     "type": "library",
     "license": "MIT",
-    "version": "0.7.1",
+    "version": "0.7.2",
     "authors": [
         {
             "name": "Aleksandr Besedin",
@@ -18,8 +18,7 @@
         "symfony/console": "^4.0",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^4.0",
-        "cosmonova-rnd/jwt": "^0.7",
-        "cosmonova-rnd/auth": "^0.7"
+        "cosmonova-rnd/jwt": "^0.7"
     },
     "autoload": {
         "psr-4": {
